Fix document hints visibility #LMR-1717 #LMR-1782
* use Overlay from Angular CDK

--- a/src/app/shared/document-hints/document-hints.component.scss
+++ b/src/app/shared/document-hints/document-hints.component.scss
@@ -1,16 +1,4 @@
 @import '~src/styles/variables';
-@import '~src/styles/bootstrap_var';
-
-:host {
-  display: block;
-  transform: scale(1);
-  position: relative;
-  z-index: $zindex-dropdown;
-
-  & > div {
-    position: absolute;
-  }
-}
 
 .selected {
   background-color: $gray-300;
